--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ span#home{
     grid-area: content;
     background-color: #FFFFFF;
     display: grid;
-    grid-template-rows: 0.70fr 2fr;
+    grid-template-rows: minmax(20px,0.10fr) 2fr;
     grid-template-columns: 3fr 1fr;
     grid-template-areas: 
     "heading heading";
