--- a/style.css
+++ b/style.css
@@ -1,3 +1,168 @@
+@media (max-width: 1381px) {
+    
+    .card-container{
+        grid-template-rows: 0.3fr 2rem 0.3fr 2rem 0.3fr!important;
+
+        }
+        .content-card {
+            
+            gap: 2rem!important;
+        }
+      }
+@media (max-width: 1224px) {
+    
+        p{
+            font-size:0.9rem!important;
+    
+            }
+            button{
+                display: none!important;
+            }
+            h3#user-name {
+                font-size: 0.8rem!important;
+            }
+            .content-card {
+            
+                gap: 1rem!important;
+            }
+          }
+ @media (max-width: 1117px){
+    p{
+        font-size:0.8rem!important;
+        p.sub-txt{
+            font-size:0.6rem!important;
+        }
+        }
+          }
+
+          /* Mobile  */
+          @media (max-width: 430px){
+            .wrapper {
+                grid-template-columns: 50px 1fr 1fr 1fr 1fr!important;
+                grid-template-rows: 0.2 0.5fr 4fr 1fr 0.5fr;
+                grid-template-areas: 
+                ". header header header header"
+                ". content content content content"
+                ". content content content content"
+                ". content content content content"!important;
+            
+                
+            }
+                  }
+                  @media(max-width:985px){
+                    .wrapper {
+                        
+                        /* grid-template-rows: 1fr 0.5fr 4fr 1fr 0.5fr 0.10fr; */
+                        grid-template-columns: minmax(100px, 0.05fr) 1fr 1fr 1fr 1fr!important;
+                        grid-template-areas:
+                            "sidebar header header header header"
+                            "sidebar content content content content"
+                            "sidebar content content content content"
+                            "sidebar content content content content";}
+                            h1{
+                                font-size: 0.7rem!important;
+                            }
+
+                            span > h3 {
+                                display: none!important;
+                            }
+                            .inspired{
+                                display: none!important;
+                            }
+                            span#home{
+                                padding: 0px!important;
+                            }
+                    }
+
+                    @media(max-width:850px){
+                        .card-container {
+                            grid-template-columns: 0.10fr 0.25fr 0.25fr 0.17 0.10fr!important;
+                            grid-template-rows: 200px 15px 200px 15px 200px 15px!important;
+                            
+                            
+                            
+                        }
+
+                        .side-content {
+                         
+                            grid-template-rows: 0.8fr 0.1fr 0.4fr!important;
+                            grid-template-columns: 2rem 1fr 2rem!important;
+                            grid-template-areas:
+                                ". announce ."
+                                ". . ."
+                                " . trend ."!important;
+                        }
+
+                        #revenue-heading{
+                            display: none!important;
+                        
+                    }
+                .word-card > p {
+                    font-size: 0.6rem!important;
+                }
+                #card-icons1 > img{height: 10px!important;}
+                .main-content{
+                    grid-row-gap: 10px!important;
+                }
+                .content-card {
+                    gap: 0rem!important;
+            }}
+                @media screen and (max-width:578px) {
+                    .heading > h4 {
+                        display: none;
+                    }
+                    body > .wrapper {
+                    
+                        grid-template-rows: 100px 0.5fr 4fr 1fr 0.5fr 0.10fr;
+                    }
+                }
+            @media screen and (max-width: 825px)
+            {
+                .side-bar{
+                    display: none!important;
+                }
+                body > .wrapper{
+                    grid-template-columns: 1fr 1fr 1fr 1fr !important;
+                    grid-template-areas:
+        "header header header header"
+        "content content content content"
+        "content content content content"
+        "content content content content";
+                }
+                .main-content > .card-container {
+                    grid-template-areas:
+                    ". item1 item1 item1 ."
+                    ". . . . ."
+                    ". item2 item2 item2 ."
+                    ". . . . ."
+                    ". item3 item3 item3 ."
+                    ". . . . ."
+                    ". item4 item4 item4 ."
+                    ". . . . ."
+                    ". item5 item5 item5 ."
+                    ". . . . ."
+                    ". item6 item6 item6 .";
+
+                    grid-template-rows: 200px 15px 200px 15px 200px 15px 200px 15px 200px 15px 200px 15px !important;
+                    
+                }
+
+               .wrapper > .main-content {
+                   
+                grid-template-columns: 1fr minmax(0,1fr);
+            }
+        .newsfeed > .row > p{
+            font-size: 0.725rem;
+        } 
+    
+    .side-content {
+        grid-template-columns: 0.10fr 1fr 0.10fr !important;
+    grid-template-rows:0.8fr 20px 0.4fr !important; ;}
+    }
+.row > h3 {
+    font-size: 1rem;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -16,10 +181,11 @@ span#home{
     border-radius: 10px;
 
 }
+
 .wrapper{
     display: grid;
    height: 100vh;
-   grid-template-rows: 1fr 0.5fr 4fr 1fr;
+   grid-template-rows: 1fr 0.5fr 4fr 1fr 0.5fr 0.10fr;
     grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr;
     grid-template-areas: 
     "sidebar header header header header"
@@ -28,6 +194,7 @@ span#home{
     "sidebar content content content content";
 
 }
+
 .side-bar{
     grid-area: sidebar;
     background-color: #FFFFFF;
@@ -64,7 +231,7 @@ span#home{
     grid-area: content;
     background-color: #FFFFFF;
     display: grid;
-    grid-template-rows: minmax(20px,0.10fr) 2fr;
+    grid-template-rows: minmax(40px, 0.40fr) 2fr;
     grid-template-columns: 3fr 1fr;
     grid-template-areas: 
     "heading heading";
@@ -85,7 +252,7 @@ span#home{
 .card-container{
    display: grid;
    grid-template-columns: 0.10fr 1.2fr 0.10fr 1.2fr 0.10fr;
-grid-template-rows: 0.5fr 0.10fr 0.5fr 0.10fr 0.5fr;
+grid-template-rows: 0.5fr 0.10fr 0.5fr 0.10fr 0.5fr 0.10fr;
 background-color: #FFFFFF;
 grid-template-areas: 
 ". item1 . item2 ."
@@ -255,14 +422,23 @@ button#out:hover{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.10);
     
 }
+.fillheader{
+    margin-top: auto;
+    margin-bottom: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
 .userwelcome{
     display: grid;
     grid-template-columns: 0.1fr 3fr  1.9fr;
+    grid-template-rows: min-content;
     flex: 2.5;
     align-items: center;
     border-bottom-left-radius: 20px;
     margin: 0px 1.5rem;
     gap: 10px;
+    max-height: 85px;
 }
 .welcome-txt{
     display: flex;
